<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="150dp"
    android:layout_height="180dp"
    android:layout_marginStart="@dimen/margin_small"
    android:layout_marginBottom="@dimen/margin_small"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/recommended_img"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/recommended_text"
            android:src="@drawable/img_sample"
            android:scaleType="centerCrop"/>

        <!--Top Shade-->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/recommended_text"
            android:scaleType="fitXY"
            android:src="@drawable/img_shade" />

        <TextView
            android:id="@+id/property_text"
            style="@style/RecommendedTitleTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_extra_small"
            android:layout_marginEnd="@dimen/margin_extra_small"
            android:text="@string/mountain_safari_text"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/location_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/location_text"
            style="@style/RecommendedLocationTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_extra_small"
            android:layout_marginEnd="@dimen/margin_extra_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:drawablePadding="@dimen/_3sdp"
            android:text="@string/india_text"
            android:textSize="12sp"
            app:drawableStartCompat="@drawable/ic_map_pin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            android:id="@+id/bookmark_icon"
            android:layout_width="@dimen/cat_icon_size"
            android:layout_height="@dimen/cat_icon_size"
            layout="@layout/bookmark"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>