<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/screen_background"
    tools:context=".ui.screens.seedetails.SeeDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_size"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@color/screen_background"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivBackArrow"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/margin_small"
                android:clickable="true"
                android:contentDescription="@string/back_arrow_text"
                android:focusable="true"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/AppBarTitleTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/recommended_text"
                app:layout_constraintBottom_toBottomOf="@id/ivBackArrow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/ivBackArrow" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/no_data_found_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:visibility="gone" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/loadingEffect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appBar"
        android:layout_centerHorizontal="true"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:orientation="horizontal"
                android:weightSum="2">

                <include layout="@layout/item_recommended_place_vertical_loading" />

                <include layout="@layout/item_recommended_place_vertical_loading" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal"
                android:weightSum="2">

                <include layout="@layout/item_recommended_place_vertical_loading" />

                <include layout="@layout/item_recommended_place_vertical_loading" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal"
                android:weightSum="2">

                <include layout="@layout/item_recommended_place_vertical_loading" />

                <include layout="@layout/item_recommended_place_vertical_loading" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_small"
                android:layout_marginTop="@dimen/margin_small"
                android:orientation="horizontal"
                android:weightSum="2">

                <include layout="@layout/item_recommended_place_vertical_loading" />

                <include layout="@layout/item_recommended_place_vertical_loading" />

            </LinearLayout>

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecommended"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/appBar"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_1sdp"
        android:visibility="gone"
        tools:itemCount="4"
        tools:listitem="@layout/item_recommended_place_vertical" />

</RelativeLayout>